# poromics

./: .dockerignore  .gitignore  05_Validate_Network.py  AGENTS.md  LICENSE.md  Makefile  README.md  TODO.md  create_test_file.py  docker-compose.yml  julia_client.py  julia_server.jl  kabs_permeability_core.py  manage.py  new_feature_workflow.md  package-lock.json  package.json  pegasus-config.yaml  pyproject.toml  python_remote_client.py  python_remote_server.py  raw_to_numpy.py  render.yaml  runpod  runpod.pub  scale-to-zero-refactor-plan.md  set_password.py  taichi_client.py  taichi_server.py  taichi_serverless_handler.py  test_thumbnail.py  test_upload.npy  vite.config.ts
.claude/guides/: README.md  frontend-ui.md
.kilo/plans/: 1777249058115-curious-cactus.md
.leankg/: leankg.yaml
api-client/: runtime.ts
api-client/.openapi-generator/: FILES
api-client/apis/: PegasusApi.ts  TeamsApi.ts
api-client/models/: AggregateEmployeeData.ts  DepartmentEnum.ts  Employee.ts  Invitation.ts  Membership.ts  OpenInvitation.ts  PaginatedEmployeeList.ts  PaginatedInvitationList.ts  PaginatedTeamList.ts  PatchedEmployee.ts  PatchedInvitation.ts  PatchedTeam.ts  RoleEnum.ts  Team.ts  UserInvitationsResponse.ts  index.ts
apps/api/: permissions.py
apps/dashboard/: forms.py  services.py  urls.py  views.py
apps/pore_analysis/: admin.py  apps.py  forms.py  models.py  queue_catalog.py  runpod_orchestration.py  runpod_serverless_client.py  (+2 more)
config/: queues.yaml
deploy/: build.sh  build_celery.sh  start_celery_worker.sh
poromics/: asgi.py  celery.py  channels_urls.py  settings.py  settings_production.py  urls.py  wsgi.py
(+117 files in other folders)
